exports[`BpkNudger should render correctly 1`] = `
<div
  className="bpk-nudger">
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(0, 178, 214)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M2.5 11C1.7 11 1 10.3 1 9.5v-1C1 7.7 1.7 7 2.5 7h13c.8 0 1.5.7 1.5 1.5v1c0 .8-.7 1.5-1.5 1.5h-13z" />
    </svg>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input"
    id="nudger"
    readOnly={true}
    role="alert"
    type="text"
    value={2} />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(0, 178, 214)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M14.5 7H11V3.5c0-.8-.7-1.5-1.5-1.5h-1C7.7 2 7 2.7 7 3.5V7H3.5C2.7 7 2 7.7 2 8.5v1c0 .8.7 1.5 1.5 1.5H7v3.5c0 .8.7 1.5 1.5 1.5h1c.8 0 1.5-.7 1.5-1.5V11h3.5c.8 0 1.5-.7 1.5-1.5v-1c0-.8-.7-1.5-1.5-1.5z" />
    </svg>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a "className" attribute 1`] = `
<div
  className="bpk-nudger my-nudger">
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(0, 178, 214)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M2.5 11C1.7 11 1 10.3 1 9.5v-1C1 7.7 1.7 7 2.5 7h13c.8 0 1.5.7 1.5 1.5v1c0 .8-.7 1.5-1.5 1.5h-13z" />
    </svg>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input"
    id="nudger"
    readOnly={true}
    role="alert"
    type="text"
    value={2} />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(0, 178, 214)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M14.5 7H11V3.5c0-.8-.7-1.5-1.5-1.5h-1C7.7 2 7 2.7 7 3.5V7H3.5C2.7 7 2 7.7 2 8.5v1c0 .8.7 1.5 1.5 1.5H7v3.5c0 .8.7 1.5 1.5 1.5h1c.8 0 1.5-.7 1.5-1.5V11h3.5c.8 0 1.5-.7 1.5-1.5v-1c0-.8-.7-1.5-1.5-1.5z" />
    </svg>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a value < min 1`] = `
<div
  className="bpk-nudger">
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={true}
    onClick={[Function]}
    title="Decrease"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(178, 174, 189)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M2.5 11C1.7 11 1 10.3 1 9.5v-1C1 7.7 1.7 7 2.5 7h13c.8 0 1.5.7 1.5 1.5v1c0 .8-.7 1.5-1.5 1.5h-13z" />
    </svg>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input"
    id="nudger"
    readOnly={true}
    role="alert"
    type="text"
    value={1} />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(0, 178, 214)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M14.5 7H11V3.5c0-.8-.7-1.5-1.5-1.5h-1C7.7 2 7 2.7 7 3.5V7H3.5C2.7 7 2 7.7 2 8.5v1c0 .8.7 1.5 1.5 1.5H7v3.5c0 .8.7 1.5 1.5 1.5h1c.8 0 1.5-.7 1.5-1.5V11h3.5c.8 0 1.5-.7 1.5-1.5v-1c0-.8-.7-1.5-1.5-1.5z" />
    </svg>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a value = max 1`] = `
<div
  className="bpk-nudger">
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(0, 178, 214)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M2.5 11C1.7 11 1 10.3 1 9.5v-1C1 7.7 1.7 7 2.5 7h13c.8 0 1.5.7 1.5 1.5v1c0 .8-.7 1.5-1.5 1.5h-13z" />
    </svg>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input"
    id="nudger"
    readOnly={true}
    role="alert"
    type="text"
    value={9} />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={true}
    onClick={[Function]}
    title="Increase"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(178, 174, 189)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M14.5 7H11V3.5c0-.8-.7-1.5-1.5-1.5h-1C7.7 2 7 2.7 7 3.5V7H3.5C2.7 7 2 7.7 2 8.5v1c0 .8.7 1.5 1.5 1.5H7v3.5c0 .8.7 1.5 1.5 1.5h1c.8 0 1.5-.7 1.5-1.5V11h3.5c.8 0 1.5-.7 1.5-1.5v-1c0-.8-.7-1.5-1.5-1.5z" />
    </svg>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a value = min 1`] = `
<div
  className="bpk-nudger">
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={true}
    onClick={[Function]}
    title="Decrease"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(178, 174, 189)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M2.5 11C1.7 11 1 10.3 1 9.5v-1C1 7.7 1.7 7 2.5 7h13c.8 0 1.5.7 1.5 1.5v1c0 .8-.7 1.5-1.5 1.5h-13z" />
    </svg>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input"
    id="nudger"
    readOnly={true}
    role="alert"
    type="text"
    value={1} />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={false}
    onClick={[Function]}
    title="Increase"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(0, 178, 214)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M14.5 7H11V3.5c0-.8-.7-1.5-1.5-1.5h-1C7.7 2 7 2.7 7 3.5V7H3.5C2.7 7 2 7.7 2 8.5v1c0 .8.7 1.5 1.5 1.5H7v3.5c0 .8.7 1.5 1.5 1.5h1c.8 0 1.5-.7 1.5-1.5V11h3.5c.8 0 1.5-.7 1.5-1.5v-1c0-.8-.7-1.5-1.5-1.5z" />
    </svg>
  </button>
</div>
`;

exports[`BpkNudger should render correctly with a value > max 1`] = `
<div
  className="bpk-nudger">
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={false}
    onClick={[Function]}
    title="Decrease"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(0, 178, 214)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M2.5 11C1.7 11 1 10.3 1 9.5v-1C1 7.7 1.7 7 2.5 7h13c.8 0 1.5.7 1.5 1.5v1c0 .8-.7 1.5-1.5 1.5h-13z" />
    </svg>
  </button>
  <input
    aria-live="assertive"
    className="bpk-nudger__input"
    id="nudger"
    readOnly={true}
    role="alert"
    type="text"
    value={9} />
  <button
    aria-controls="nudger"
    className="bpk-button bpk-button--secondary bpk-button--icon-only"
    disabled={true}
    onClick={[Function]}
    title="Increase"
    type="button">
    <svg
      className="bpk-icon--align-to-button"
      fill="rgb(178, 174, 189)"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 18 18"
      width="18"
      xmlns="http://www.w3.org/2000/svg">
      <path
        d="M14.5 7H11V3.5c0-.8-.7-1.5-1.5-1.5h-1C7.7 2 7 2.7 7 3.5V7H3.5C2.7 7 2 7.7 2 8.5v1c0 .8.7 1.5 1.5 1.5H7v3.5c0 .8.7 1.5 1.5 1.5h1c.8 0 1.5-.7 1.5-1.5V11h3.5c.8 0 1.5-.7 1.5-1.5v-1c0-.8-.7-1.5-1.5-1.5z" />
    </svg>
  </button>
</div>
`;
